--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-sourcemaps": "2.6.4",
     "gulp-svgstore": "6.1.1",
     "rollup-plugin-commonjs": "9.2.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
     "stylelint": "9.4.x",
     "stylelint-config-htmlacademy": "0.1.x"
   },
